@@ -1,6 +1,13 @@
 2009-09-18  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/controller.c
+	(+show_banner_idle, download_track_thread, tag_track_thread)
+	(recomm_track_thread):
+	Use an idle handler to show information banners.
+
+2009-09-18  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/controller.c
 	(+set_album_cover_idle, set_album_cover_thread):
 	Set the album cover in the main window using an idle handler.
 	(controller_show_cover):
